# autotile_gpu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  quick_decoder.py
assets/systems/: general_converter.py  rule_maker.py
assets/systems/cross/: cross.haff  cross.htrans  cross.vaff
assets/systems/decimal/: counter.key  counter.states  counter.vaff
assets/systems/fractal/: sierpinski_triangle.htrans
assets/systems/fractal2/: fractal.haff  fractal.states
assets/systems/infinite_cross/: cross.haff  cross.htrans  cross.vtrans
assets/systems/longline/: test.seed  test.states  test.xml
assets/systems/small_square/: square.states  square.xml
assets/systems/test/: test.seed  test.states  test.vaff
assets/systems/tests/: seed.txt  test.hrules  test.vrules
src/: common.h  frontend.cpp  frontend.h  frontend_events.cpp  frontend_events.h  frontend_grid.cpp  frontend_grid.h  frontend_gui.cpp  frontend_gui.h  main.cpp  rules.cpp  rules.h  seed.cpp  seed.h  simulator.cpp  simulator.h  simulator_gpu.cpp  thread_communication.cpp  thread_communication.h  tile.cpp  tile.h  timer.h
src/input/: fractal_convert.py  general_converter.py  rules_test.txt
src/input/cross/: cross.vtrans
src/input/decimal/: counter.haff  counter.htrans  counter.seed  counter.vtrans
src/input/fractal/: finished.xml  sierpinksi_triangle.haff  sierpinksi_triangle.hrules  sierpinksi_triangle.seed  sierpinksi_triangle.states  sierpinksi_triangle.vaff  sierpinksi_triangle.vrules  sierpinski_triangle.haff  sierpinski_triangle.htrans  sierpinski_triangle.key  sierpinski_triangle.seed  sierpinski_triangle.vaff  sierpinski_triangle.vtrans
src/input/fractal2/: fractal.htrans  fractal.key  fractal.seed  fractal.vaff  fractal.vtrans  fractal.xml
src/input/infinite_cross/: cross.htrans  cross.seed  cross.vaff
src/input/longline/: test.haff  test.htrans  test.key  test.vaff  test.vtrans
src/input/small_square/: square.haff  square.htrans  square.key  square.seed  square.vaff  square.vtrans
src/input/test/: convert.py  finished.xml  sierpinski_triangle.haff  sierpinski_triangle.htrans  sierpinski_triangle.seed  sierpinski_triangle.states  sierpinski_triangle.vaff  sierpinski_triangle.vtrans  state_keys.txt  test.haff  test.htrans  test.key  test.vtrans
src/input/tests/: test.seed
src/shader/: check_attachments.comp  check_shader.hpp  check_transitions.comp  my_shader.comp  my_shader.hpp
statistics/: perf_graphs.py
